--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.19.1",
+    "@codemirror/commands": "^6.10.0",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/lint": "^6.9.1",
+    "@codemirror/search": "^6.5.11",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/view": "^6.38.6",
+    "@lezer/highlight": "^1.2.3",
     "@tauri-apps/api": "^2.9.0",
-    "@tauri-apps/plugin-opener": "^2.5.2",
     "@tauri-apps/plugin-dialog": "^2.0.0",
     "@tauri-apps/plugin-fs": "^2.0.0",
+    "@tauri-apps/plugin-opener": "^2.5.2",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
-    "monaco-editor": "^0.54.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
