--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "@tauri-apps/plugin-dialog": "^2.0.0",
     "@tauri-apps/plugin-fs": "^2.0.0",
     "@tauri-apps/plugin-opener": "^2.5.2",
-    "ajv": "^8.17.1",
-    "ajv-formats": "^3.0.1",
+    "codemirror-json-schema": "^0.8.1",
+    "json-schema-library": "^9.3.5",
     "vue": "^3.5.22"
   },
   "devDependencies": {
